kubex/kubex1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-server
  labels: 
    name: web-server
  
spec:
  containers:
    - name: nginx
      image: nginx:1.19.10
