kubex/kubex10-pod-binding.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis-pod-binding
  labels:
    name: redis-pod-binding

spec:
  containers:
    - name: redis-image
      image: redis:6.2.2
      volumeMounts:
        - mountPath: /data
          name: redis-persistent-volume
  volumes:
    - name: redis-persistent-volume
      persistentVolumeClaim:
        claimName: redis-pvc
