kubex/kubex12-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deploy
  labels:
    name: web-deploy
spec:
  selector:
    matchLabels:
      name: web-server
  replicas: 2 
  template:
    metadata:
      name: web-server
      labels: 
        name: web-server
    
    spec:
      containers:
        - name: nginx
          image: nginx:1.19.10
