kubex/kubex12-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-deploy-service
  labels:
    name: web-deploy-service
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    name: web-server
