kubex/kubex2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    env: service_testing
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30005
  selector:
    name: web-server
