kubex/kubex12-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-deploy-ingress
  labels:
    name: web-deploy-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: web-deploy-service
                port:
                  number: 80
